--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script defer type="text/javascript" src="./js/script.js"></script>
 </head>
 <body>
-    
+    <div id="container"></div>
 </body>
 </html>
